Fix nav not visible on zoomed/largeres situations

--- a/content/themes/dude/sass/navigation/_nav-mobile.scss
+++ b/content/themes/dude/sass/navigation/_nav-mobile.scss
@@ -101,7 +101,6 @@ body:not(.js-nav-active) .nav-primary.is-animatable {
   margin: 0;
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
   padding-left: 0;
   padding-right: 0;
   padding-top: 42px;
